Fix IE scrollbar, widget default size

--- a/modules/weko-theme/weko_theme/static/css/weko_theme/widget.css
+++ b/modules/weko-theme/weko_theme/static/css/weko_theme/widget.css
@@ -209,6 +209,10 @@
   margin: 0 !important;
 }
 
+@-ms-viewport{
+  width:auto!important;
+}
+
 @keyframes rotation {
   from {
     opacity: 1;
